--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,9 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
                   <version>2.22.2</version>
+                  <configuration>
+                      <testFailureIgnore>true</testFailureIgnore>
+                  </configuration>
               </plugin>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
@@ -155,9 +158,6 @@
                   <configuration>
                       <outputDirectory>${basedir}/target/site/surefire-report.html</outputDirectory>
                   </configuration>
-                  <!--<configuration>-->
-                  <!--<outputDirectory>C:\Users\ab66378\Desktop</outputDirectory>-->
-                  <!--</configuration>-->
               </plugin>
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
